Added javascript code for aton class for interactive use on homepage.

--- a/_includes/aton-test.html
+++ b/_includes/aton-test.html
@@ -1,4 +1,4 @@
-<script src="../../lib/aton.js"></script>
+<script src="/javascripts/aton-0.0.0.min.js"></script>
 <script>
    document.addEventListener("DOMContentLoaded", function (event) {
       updateJSON()
