--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -17,7 +17,7 @@
 		<div class="wrapper">
 			<header>
 				<h1>ATON</h1>
-				<p>JavaScript class for processing fractions</p>
+				<p>JavaScript class for processing AT Notation Objects</p>
 				<p class="view"><a href="https://github.com/craigsapp/ATON">View the Project on GitHub <small>craigsapp/ATON</small></a></p>
 				<ul>
 					<li><a href="https://github.com/craigsapp/ATON/zipball/master">Download <strong>ZIP File</strong></a></li>
