Updating install.md.

--- a/_includes/aton-test.html
+++ b/_includes/aton-test.html
@@ -34,6 +34,7 @@ in JSON format on the right. A check mark after the ATON heading
 indicates that the ATON content is well-formed.  A red &#10008;
 indicates a syntax error.
 
+<center>
 <table>
 <tr>
 <td>
@@ -60,4 +61,5 @@ value3a continued further
 </td>
 </tr>
 </table>
+</center>
 
