Updating style more.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -133,6 +133,8 @@ header ul {
   top: 20px;
   height: 38px;
   padding: 1px 0;
+
+/*
   background: #5198DF;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #77b9fb), color-stop(100%, #3782cd));
   background: -webkit-linear-gradient(#77b9fb, #3782cd);
@@ -140,6 +142,16 @@ header ul {
   background: -o-linear-gradient(#77b9fb, #3782cd);
   background: -ms-linear-gradient(#77b9fb, #3782cd);
   background: linear-gradient(#77b9fb, #3782cd);
+*/
+
+  background: #DF519851;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fbb977), color-stop(100%, #cd8237));
+  background: -webkit-linear-gradient(#fbb977, #cd8237);
+  background: -moz-linear-gradient(#fbb977, #cd8237);
+  background: -o-linear-gradient(#fbb977, #cd8237);
+  background: -ms-linear-gradient(#fbb977, #cd8237);
+  background: linear-gradient(#fbb977, #cd8237);
+
   border-radius: 5px;
   -webkit-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
   -moz-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
@@ -299,7 +311,7 @@ table {
 th, td {
   text-align: left;
   padding: 5px 10px;
-  border-bottom: 1px solid #aaa;
+  /* border-bottom: 1px solid #aaa; trying to remove lines under tables...*/
 }
 
 dt {
