--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -67,7 +67,7 @@ header {
   /* background: #C5EAFA; light blue */
   background: #fff6ae; /* light yellow */
 /* background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ddfbfc), color-stop(100%, #c6eafa)); */
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ddfbfc), color-stop(100%, #ffefae));
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fcfbdd), color-stop(100%, #ffefae));
 
 /*
   background: -webkit-linear-gradient(#ddfbfc, #c6eafa);
@@ -76,11 +76,11 @@ header {
   background: -ms-linear-gradient(#ddfbfc, #c6eafa);
   background: linear-gradient(#ddfbfc, #c6eafa);
 */
-  background: -webkit-linear-gradient(#ddfbfc, #ffefae);
-  background: -moz-linear-gradient(#ddfbfc, #ffefae);
-  background: -o-linear-gradient(#ddfbfc, #ffefae);
-  background: -ms-linear-gradient(#ddfbfc, #ffefae);
-  background: linear-gradient(#ddfbfc, #ffefae);
+  background: -webkit-linear-gradient(#fcfbdd, #ffefae);
+  background: -moz-linear-gradient(#fcfbdd, #ffefae);
+  background: -o-linear-gradient(#fcfbdd, #ffefae);
+  background: -ms-linear-gradient(#fcfbdd, #ffefae);
+  background: linear-gradient(#fcfbdd, #ffefae);
 
   position: relative;
   padding-top: 40px;
