--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,9 +15,9 @@
 
 	<body>
 		<div class="wrapper">
-			<header>
+			<header style="padding-top:30px; padding-bottom:20px; background: #dec590 url('/images/aten-overlay-small.png') 144px 50% no-repeat;"> 
 				<h1>ATON</h1>
-				<p>JavaScript class for processing AT Notation Objects</p>
+				<p style="color:#714b22;"><b>JavaScript class for processing<br>AT Object Notation</b></p>
 				<p class="view"><a href="https://github.com/craigsapp/ATON">View the Project on GitHub <small>craigsapp/ATON</small></a></p>
 				<ul>
 					<li><a href="https://github.com/craigsapp/ATON/zipball/master">Download <strong>ZIP File</strong></a></li>
