Fixed missing <textarea> marker.

--- a/_includes/aton-test.html
+++ b/_includes/aton-test.html
@@ -53,7 +53,7 @@ value3a continued further
 @key3c: -45
 @key3c: 3.14
 @@end: 
-@key4: value4
+@key4: value4</textarea>
 </td>
 <td>
 <center><b>JSON</b></center>
