Remove small format link to github.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,7 +18,9 @@
 			<header style="padding-top:30px; padding-bottom:20px; background: #dec590 url('/images/aten-overlay-small.png') 144px 50% no-repeat;"> 
 				<h1>ATON</h1>
 				<p style="color:#714b22;"><b>JavaScript class for processing<br>AT Object Notation</b></p>
-				<p class="view"><a href="https://github.com/craigsapp/ATON">View the Project on GitHub <small>craigsapp/ATON</small></a></p>
+<!--
+				<p class="view"><a href="https://github.com/craigsapp/ATON">the Project on GitHub <small>craigsapp/ATON</small></a></p>
+-->
 				<ul>
 					<li><a href="https://github.com/craigsapp/ATON/zipball/master">Download <strong>ZIP File</strong></a></li>
 					<li><a href="https://github.com/craigsapp/ATON/tarball/master">Download <strong>TAR Ball</strong></a></li>
